Move API key values to a class, and do NOT commit that class to version control.